force-app/main/default/objects/ProgramParticipant__c/ProgramParticipant__c.object-meta.xml
<CustomObject>
    <label>Program Participant (or unique ID)</label>
    <nameField>
        <label>Program Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>