force-app/main/default/objects/ProgramParticipant__c/fields/Annual_Family_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Family_Income__c</fullName>
    <label>Annual Family Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>