force-app/main/default/objects/ProgramParticipant__c/fields/EligibilityVerifiedHomeless__c.field-meta.xml
<CustomField>
    <fullName>EligibilityVerifiedHomeless__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Verified (Homeless)</label>
    <type>Checkbox</type>
</CustomField>