force-app/main/default/objects/ProgramParticipant__c/fields/Family_Size__c.field-meta.xml
<CustomField>
    <fullName>Family_Size__c</fullName>
    <label>Family Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>