force-app/main/default/objects/ProgramParticipant__c/fields/First_Last_Name_or_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>First_Last_Name_or_Unique_ID__c</fullName>
    <inlineHelpText>up to 65 Characters</inlineHelpText>
    <label>First Last Name or Unique ID</label>
    <length>65</length>
    <type>Text</type>
</CustomField>