force-app/main/default/objects/ProgramParticipant__c/fields/Income_AMI__c.field-meta.xml
<CustomField>
    <fullName>Income_AMI__c</fullName>
    <label>Income AMI%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moderate 80%</fullName>
            </value>
            <value>
                <fullName>Low 50%</fullName>
            </value>
            <value>
                <fullName>Ex Low 30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>