force-app/main/default/objects/ProgramParticipant__c/fields/NRSA__c.field-meta.xml
<CustomField>
    <fullName>NRSA__c</fullName>
    <label>NRSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North west</fullName>
            </value>
            <value>
                <fullName>North Central</fullName>
            </value>
            <value>
                <fullName>Southeast Proposed</fullName>
            </value>
            <value>
                <fullName>Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>