force-app/main/default/objects/ProgramParticipant__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting</label>
    <referenceTo>Reporting__c</referenceTo>
    <relationshipName>Program_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>