force-app/main/default/objects/ProgramParticipant__c/fields/Reporting_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Detail</label>
    <referenceTo>ReportingDetail__c</referenceTo>
    <relationshipLabel>Program Participants</relationshipLabel>
    <relationshipName>Program_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>