force-app/main/default/objects/ProgramParticipant__c/fields/Unduplicated__c.field-meta.xml
<CustomField>
    <fullName>Unduplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unduplicated</label>
    <type>Checkbox</type>
</CustomField>